# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/: settings.csv  statistics.csv
dokumentaatio/: arkkitehtuuri.md  käyttöohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
dokumentaatio/kuvat/: Untitled Diagram.drawio
laskarit/viikko1/: gitlog.txt  kometorivi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/htmlcov/: index.html  src_maksukortti_py.html  src_tests___init___py.html  src_tests_maksukortti_test_py.html  status.json
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: GUI.py  config.py  gridLogic.py  gridVisual.py  gridlogic.py  root.py  square.py
src/logic/: gridlogic.py  settings.py  square.py  statistics.py
src/tests/: gridLogic_test.py  gridlogic_test.py  settings_test.py  square_test.py  statistics_test.py
src/ui/: game_over_popup.py  game_over_ui.py  game_ui.py  game_window.py  settings_popup.py  settings_ui.py  statistics_ui.py  ui.py
